daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multitool
  labels:
    app: multitool
spec:
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:openshift
        volumeMounts:
        - name: my-volume
          mountPath: /logs/
          readOnly: true
      volumes:
      - name: my-volume
        hostPath: 
          path: /var/log/
