deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-multitool
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ['sh', '-c', 'while true; do echo Hello >> /output/test.txt; sleep 5; done']
        volumeMounts:
        - name: my-volume
          mountPath: /output
      - name: multitool
        image: wbitt/network-multitool:openshift
        volumeMounts:
        - name: my-volume
          mountPath: /input
      volumes:
      - name: my-volume
        hostPath: 
          path: /tmp/data
