deployment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  namespace: web
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:openshift
        volumeMounts:
        - name: vol
          mountPath: /input
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: pvc-vol
