pod.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: netology-web
  labels:
    mylab: mypod
spec:
  containers:
  - name: web
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
