service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend 
spec:
  selector:
    app: frontend 
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
  
apiVersion: v1
kind: Service
metadata:
  name: backend  
spec:
  selector:
    app: backend  
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
