serviceNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
  type: NodePort
